--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+
+.body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.main-title {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  text-transform: uppercase;
+  text-shadow: 0 0 5px rgb(77, 97, 97);
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid #000;
+  box-shadow: 2px 1px 5px 0 rgb(187, 187, 187);
+  margin: 2rem auto;
+  width: 50%;
+  
+}
+
+.listening {
+  margin: 7px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-wrapper {
+  margin: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.save-btn {
+  margin: 0.5rem;
+  padding: 0.2rem;
+  border: 1px solid #000;
+  box-shadow: 2px 1px 5px 0 rgb(187, 187, 187);
+  cursor: pointer;
+  background-color: rgb(77, 97, 97);
+  color: #fff;
+  padding: 7px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-container {
+  margin: 2rem;
 }
